--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -48,16 +48,18 @@ body {
 }
 
 .project-body {
+  margin-top: 70px;
+
   background-color: black;
 }
 
 .project-body__mission {
   display: flex;
   align-items: center;
-  flex-wrap: wrap;
   justify-content: center;
+  margin: 0 auto;
+  width: 1200px;
   height: 700px;
-  padding-top: 70px;
 
   background-image: url('../images/img-mission-background.jpg');
   background-size: cover;
