--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -13,6 +13,12 @@ html {
 body {
   margin: 0;
   padding: 0;
+
+  color: seashell;
+}
+
+a {
+  color: seashell;
 }
 
 .header {
@@ -35,7 +41,6 @@ body {
 .header__link {
   font-family: Helvetica;
   font-size: 22px;
-  color: seashell;
 }
 
 .header__link + .header__link {
@@ -88,7 +93,6 @@ body {
   font-size: 33px;
   font-weight: bold;
 
-  color: seashell;
   opacity: 0.9;
 }
 
@@ -98,7 +102,6 @@ body {
   font-family: Helvetica;
   font-size: 21px;
   font-weight: bold;
-  color: seashell;
   opacity: 0.9;
 }
 
@@ -116,7 +119,6 @@ body {
 
   padding: 10px;
 
-  color: seashell;
   opacity: 0.9;
 }
 
@@ -126,7 +128,6 @@ body {
   font-weight: bold;
   padding: 10px;
 
-  color: seashell;
   opacity: 0.9;
 }
 
@@ -159,56 +160,61 @@ body {
   font-size: 22px;
   font-weight: bold;
 
-  color: seashell;
   opacity: 0.9;
 }
 
 .project-body__geo {
   display: flex;
-  justify-content: space-between;
-
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 1200px;
   height: 500px;
-  padding-top: 70px;
+  margin: 0 auto;
 
   background-image: url('../images/img-locations-background.jpg');
   background-repeat: no-repeat;
 }
 
-.geo-title {
+.geo-locations__title {
   font-family: Helvetica;
   font-size: 24px;
   font-weight: bold;
 
   text-align: center;
 
-  color: seashell;
   opacity: 0.9;
 }
 
-.geo-downtown-block {
-  height: 300px;
-  width: 300px;
-  background-color: black;
-}
-
-.geo-eastbayside-block {
+.geo-locations__locations {
   display: flex;
-  flex-direction: column;
+  margin-top: 15px;
+}
+
+.shop-location {
+  display: flex;
+  align-items: center;
   justify-content: center;
-
+  flex-direction: column;
   height: 300px;
   width: 300px;
+
   background-color: black;
+
+  font-family: Helvetica;
+  text-align: center;
 }
 
-.geo-oakdale-block {
-  height: 300px;
-  width: 300px;
-  background-color: black;
+.shop-location__title {
+  font-size: 24px;
+  font-weight: bold;
 }
 
-• Block
-• Border
-• Background
-• Text
-Other
+.shop-location__address {
+  font-size: 18px;
+  line-height: 50px;
+}
+
+.shop-location + .shop-location {
+  margin-left: 40px;
+}
