--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -14,6 +14,7 @@ body {
   margin: 0;
   padding: 0;
 
+  font-family: Helvetica;
   color: seashell;
 }
 
@@ -39,7 +40,6 @@ a {
 }
 
 .header__link {
-  font-family: Helvetica;
   font-size: 22px;
 }
 
@@ -89,7 +89,6 @@ a {
   padding: 10px 25px 25px 25px ;
   text-align: center;
 
-  font-family: Helvetica;
   font-size: 33px;
   font-weight: bold;
 
@@ -99,7 +98,6 @@ a {
 .mission-content__statement {
   text-align: center;
 
-  font-family: Helvetica;
   font-size: 21px;
   font-weight: bold;
   opacity: 0.9;
@@ -113,7 +111,6 @@ a {
 }
 
 .shop-choice__title {
-  font-family: Helvetica;
   font-size: 33px;
   font-weight: bold;
 
@@ -123,7 +120,6 @@ a {
 }
 
 .shop-choice__statement {
-  font-family: Helvetica;
   font-size: 22px;
   font-weight: bold;
   padding: 10px;
@@ -156,7 +152,6 @@ a {
   margin-top: 10px;
 
   text-align: center;
-  font-family: Helvetica;
   font-size: 22px;
   font-weight: bold;
 
@@ -177,7 +172,6 @@ a {
 }
 
 .geo-locations__title {
-  font-family: Helvetica;
   font-size: 24px;
   font-weight: bold;
 
@@ -201,7 +195,6 @@ a {
 
   background-color: black;
 
-  font-family: Helvetica;
   text-align: center;
 }
 
@@ -217,4 +210,34 @@ a {
 
 .shop-location + .shop-location {
   margin-left: 40px;
+}
+
+.footer {
+  padding: 20px 0;
+
+  background-color: black;
+
+  font-size: 18px;
+  text-align: center;
+}
+
+.footer__shop-name {
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.footer__email {
+  display: block;
+  margin-top: 30px;
+}
+
+.footer__phone {
+  margin-top: 30px;
+}
+
+.footer__copyright {
+  margin-top: 50px;
+  padding: 0 20px;
+
+  text-align: left;
 }
